--- a/style.css
+++ b/style.css
@@ -5,3 +5,17 @@ body{
     margin: 0px;
     margin-bottom: 100px;
 }
+.chamada{
+    background:rgb(255, 0, 43);
+    margin-top: 80px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: center;
+}
+header{
+    color: white;
+    font-size: 40px;
+    border-bottom: solid 4px white;
+    padding: 20px;
+    
+}
