--- a/style.css
+++ b/style.css
@@ -17,5 +17,10 @@ header{
     font-size: 40px;
     border-bottom: solid 4px white;
     padding: 20px;
-    
+}
+.chamada-texto{
+    margin-right: 5%;
+}
+h1{
+    font-size: 35px;
 }
