--- a/style.css
+++ b/style.css
@@ -24,3 +24,22 @@ header{
 h1{
     font-size: 35px;
 }
+.categoria{
+    background: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+.categoria-videos{
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+.categoria-videos ing{
+    height: 200px;
+    opacity: 0.5px;
+}
+.categoria-videos ing:hover{
+    opacity: 1.0;
+    border: 3px solid red;
+}
